fix issue with login look on mobile

--- a/public/stylesheets/css/loginForm/new-login.css
+++ b/public/stylesheets/css/loginForm/new-login.css
@@ -197,3 +197,11 @@ a {
 #tab-2 {
     display: none;
 }
+
+@media(max-width: 600px) {
+    .login-wrap {
+        min-height: 450px;
+        width: 90vw;
+        margin-left: -30px;
+    }
+}
